# MiniRTC

./: .gitignore  CMakeLists.txt  README.md  test_rtcp_send.cpp
doc/: API_REFERENCE.md  QUICKSTART.md  analysis_v2.md  architecture_v2.md  architecture_v2_b.md  code_review_v2.md  iteration2_plan.md  phase3_plan.md  production_analysis.md  production_rtc_analysis.md  research.md  stats_design.md
doc/architecture/v1/: design.md
doc/architecture/v2/: design.md
doc/architecture/v3/: 01_capture_render.md  02_codec.md  03_transport.md  04_nack_fec.md  05_integration_test.md
doc/architecture/v4/: 06_new_architecture.md
examples/: CMakeLists.txt  minirtc_demo.cc
include/minirtc/: bandwidth_estimator.h  capture_render.h  capture_render_types.h  dtls_srtp.h  e2e_test.h  fake_audio_capture.h  fake_audio_player.h  fake_video_capture.h  fake_video_renderer.h  fec_module.h  ice.h  jitter_buffer.h  logger.h  macros.h  media_synchronizer.h  memory_pool.h  minirtc.h  nack_module.h  packet_cache.h  peer_connection.h  result.h  rtc_error.h  sdp.h  stats.h  stream_track.h  types.h
include/minirtc/codec/: codec_factory.h  codec_types.h  decoder_config.h  encoder_config.h  encoder_frame.h  h264_decoder.h  h264_encoder.h  h264_packer.h  icodec.h  idecoder.h  iencoder.h  opus_decoder.h  opus_encoder.h
include/minirtc/transport/: network_interface.h  rtcp_module.h  rtcp_packet.h  rtp_packet.h  rtp_transport.h  srtp_transport.h  transport.h  transport_types.h
src/: CMakeLists.txt  bandwidth_estimator.cc  capture_render_factory.cc  dtls_srtp.cc  e2e_test.cc  fake_audio_capture.cc  fake_audio_player.cc  fake_video_capture.cc  fake_video_renderer.cc  fec_module.cc  ice.cc  jitter_buffer.cc  media_synchronizer.cc  memory_pool.cc  nack_module.cc  packet_cache.cc  peer_connection.cc  sdp.cc  stream_track.cc
src/codec/: codec_factory.cpp  decoder_config.cpp  encoder_config.cpp  encoder_frame.cpp  h264_decoder.cpp  h264_encoder.cpp  h264_packer.cc  opus_decoder.cpp  opus_encoder.cpp
src/transport/: network_interface.cc  rtcp_module.cc  rtcp_packet.cc  rtp_packet.cc  rtp_transport.cc  srtp_transport.cc
test/: CMakeLists.txt  rtc_error_test  rtc_error_test.cpp  test_bandwidth_estimator.cc  test_capture_render.cc  test_codec.cpp  test_dtls_srtp.cc  test_fec_module.cc  test_h264_packer.cc  test_ice.cc  test_jitter_buffer.cc  test_memory_pool.cc  test_minirtc.c  test_nack_module.cc  test_packet_cache.cc  test_rtcp_packet.cc  test_rtp_packet.cc  test_stream_track.cc
test/common/: test_fec_module.cc  test_fec_module.h  test_nack_module.cc  test_nack_module.h  test_network_emulator.cc  test_network_emulator.h
test/integration/: test_av_sync.cc  test_e2e.cc  test_e2e_framework.cc  test_e2e_full.cc  test_fec_recovery.cc  test_local_loop.cc  test_nack_recovery.cc
test/unit/: test_unit.cc
